# nvm-rs

./: Cargo.toml  README.md  package.json  script.js
node-launcher/: Cargo.toml
node-launcher/src/: main.rs
node-version-clerk/: Cargo.toml
node-version-clerk/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  local.rs  package_json.rs
