[package]
name = "node-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde_json = "*"
semver_rs = "*"
anyhow = "*"
thiserror = "*"

[[bin]]
name = "node"
path = "src/main.rs"
