[package]
name = "node-version-clerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
clap = {version = "*", features = ["derive"]}

[[bin]]
name = "nvm"
path = "src/main.rs"
